--- a/thesis_paper/thesis.bib
+++ b/thesis_paper/thesis.bib
@@ -338,3 +338,21 @@ pages={576-589},
 keywords={client-server systems;computer network management;rendering (computer graphics);synchronisation;client-server-based view-dependent rendering system;dynamic adjustment mechanism;interactive view-dependent rendering;multiresolution hierarchy traversal management strategy;network latency;predictive parallel strategy;synchronization mechanism;Display algorithms;Distributed/network graphics;Viewing algorithms;Algorithms;Computer Communication Networks;Computer Graphics;Data Display;Image Enhancement;Image Interpretation, Computer-Assisted;Imaging, Three-Dimensional;Information Storage and Retrieval;Numerical Analysis, Computer-Assisted;Signal Processing, Computer-Assisted;User-Computer Interface}, 
 doi={10.1109/TVCG.2007.70626}, 
 ISSN={1077-2626},}
+
+@inproceedings{Cheng:2008:RVS,
+ author = {Cheng, Wei and Ooi, Wei Tsang},
+ title = {Receiver-driven view-dependent streaming of progressive mesh},
+ booktitle = {Proceedings of the 18th International Workshop on Network and Operating Systems Support for Digital Audio and Video},
+ series = {NOSSDAV '08},
+ year = {2008},
+ isbn = {978-1-60558-157-6},
+ location = {Braunschweig, Germany},
+ pages = {9--14},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/1496046.1496049},
+ doi = {10.1145/1496046.1496049},
+ acmid = {1496049},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {progressive meshes, view-dependent streaming},
+} 
