--- a/trunk/thesis_paper/01_Introduction.tex
+++ b/trunk/thesis_paper/01_Introduction.tex
@@ -76,13 +76,13 @@ In the pre-process phase of our application, we generate simplified base model a
 
 With the development of \emph{progressive mesh} and \emph{mesh simplification algorithms}, much attention has been taken upon \emph{view-dependent approach in streaming of progressive mesh}. The original work of Hoppe\cite{Hoppe:1996:PM} also proposed a streaming schema of \emph{progressive mesh}. Then Southern \etal \cite{Southern:2001:SCP} proposed a method that the client is stateless and only visible data is maintained. To \etal\cite{To:1999:MPS} and Kim \etal \cite{KimLK05:0}'s methods store data received from servers during the whole life cycle of a connection session. These approaches mainly focus on limited rendering capability of progressive mesh streaming.\\
 
-On the other hand, some researches are focused on limited network bandwidth on progressive mesh streaming. Yang \etal \cite{Yang:2004:VDMeshTrans} proposed a system in which the resolution of the model displayed in the client is decided by the server dependent on network bandwidth. Zheng \etal's approach \cite{Zheng:08:IVRN} use a prediction technique to reduce network latency and improve rendering quality. \\
+On the other hand, some researches are focused on limited network bandwidth and computing resources on progressive mesh streaming. Yang \etal \cite{Yang:2004:VDMeshTrans} proposed a system in which the resolution of the model displayed in the client is decided by the server dependent on network bandwidth. Zheng \etal's approach \cite{Zheng:08:IVRN} use a prediction technique to reduce network latency and improve rendering quality. Their predictive parallel approach managed to achieve an interactive frame rate and meanwhile to maintain good rendering quality for large models. Cheng \etal \cite{Cheng:2008:RVS} propose a receiver-driven protocol, in which the refinement details are totally requested by the receiver. The receiver determines which detail for refinement to send and when it is sent from server according to the estimation of the visibility and visual contributions of the refinements before receiving them through GPU. Their protocol can significantly reduce the CPU cost and network traffic of the server side. \\
 
 In \emph{view-dependent progressive mesh streaming}, the main problem and challenge is that we have to find an appropriate subset of vertex split to refine the model and produce a satisfactory rendering image on the client side. Let's consider the following situation: the user rotates the model to a specific angle and the system decides to split a set of vertices according to current viewing parameter. We can express a vertex split operation as \emph{$vsplit(v_s, v_u, v_t, v_l, v_r$)} where \emph{$v_s$} is the vertex to split, \emph{$v_u$} and \emph{$v_t$} are the resulting two vertices and \emph{$v_l$} and \emph{$v_r$} are the \emph{cut neighbors}. Among these parameters, only $v_u$ and $v_t$ are new vertices to add into the mesh, others are already in the mesh. Therefore a vertex split operation depends on the existence of (i) the vertex to be split, (ii) two cut neighbors. The first dependency is naturally solved since we are not possible to split a vertex which has not yet been recovered in the mesh. But for the second dependency, if we want to split a vertex whose cut neighbors haven't been recovered in the mesh, the split operation will fail. \\
 
 To \etal later solved the dependency problem of \emph{cut neighbors}. In \cite{To:1999:MPS} they proposed a method which finds ancestors of the cut neighbors that are existed during a vertex split. Kim \etal \cite{Kim:2001:trulyselective} later improved this method. In their approach the final mesh can keep the original connectivity. Kim and Lee \etal\cite{Kim:04:VDstreaming} then proposed a novel framework for view-dependent streaming of progressive mesh. In their framework the detail data to be transmitted to client are decided dynamically according to the client side view parameters. Our approach is inspired by their work and we applied and extended this method in our streaming schema. We will describe further details in Chapter \ref{chapter:BasicConcepts}. \\
 
-
+Until now all the previous approaches on the topic of \emph{progressive mesh streaming} are mostly based on ordinary PCs. None of them has implemented the client on a mobile device. The approach proposed in this paper tries to extend and improve from existing solutions and implement a \emph{view-dependent progressive mesh streaming} system in a server-client schema with mobile devices as clients. 
 
 
 %Picture
